--- a/src/StoreToHeaven/AddPackage.form
+++ b/src/StoreToHeaven/AddPackage.form
@@ -63,7 +63,7 @@
               <Component id="pic_detail" min="-2" pref="27" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="pic_detailSP" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="70" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="addListBT" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="deleteListBT" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -110,7 +110,7 @@
               <Color blue="cc" green="cc" red="ff" type="rgb"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[408, 231]"/>
+              <Dimension value="[410, 233]"/>
             </Property>
           </Properties>
           <Events>
@@ -120,8 +120,9 @@
             <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="wdList.add(new PackageDetail(wdList, pic_detailJP));&#xa;pic_detailJP.add(wdList.get(0));"/>
           </AuxValues>
 
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
-            <Property name="axis" type="int" value="1"/>
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+            <Property name="columns" type="int" value="1"/>
+            <Property name="rows" type="int" value="0"/>
           </Layout>
         </Container>
       </SubComponents>
@@ -135,6 +136,7 @@
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="addListBTMouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addListBTActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="deleteListBT">
