--- a/src/ToHeaven/CoffinProductPage.form
+++ b/src/ToHeaven/CoffinProductPage.form
@@ -124,7 +124,7 @@
         <Container class="javax.swing.JPanel" name="coffinProductPanel">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="ff" red="99" type="rgb"/>
+              <Color blue="99" green="99" red="99" type="rgb"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[798, 2500]"/>
